fix issues on tablet

--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -151,6 +151,17 @@
         }
     }
 }
+// tablet
+@media only screen and (max-width: 992px) {
+    html .class-Header > img {
+        align-self: center !important;
+    }
+    html .class-GalleryComponent > div:last-child, body .class-GalleryComponent > div:last-child {
+        display: flex;
+        justify-self: center;
+        width: 100vw;
+    }
+}
 // desktop mini
 @media only screen and (max-width: 1024px) {
     html {
